<resources>
    <string name="app_name">OnlineMarket</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">مشاهده همه</string>
    <string name="more_info">اطلاعات بیشتر</string>
    <string name="user_reviews">نظرات کاربران</string>
    <string name="product_info">توضیحات محصول:</string>
    <string name="add_to_cart">افـزودن به سـبـد خـریـد</string>
    <string name="continue_buying">ادامه خرید</string>
    <string name="cart">سبد خرید</string>
    <string name="my_online_market">آنلاین مارکت من</string>
    <string name="category">دسته بندی</string>
    <string name="home">خانه</string>
    <string name="filter_products">فیلتر محصولات</string>
    <string name="online_maket">آنلاین مارکت</string>
    <string name="login_note">جهت ورود یا ثبت نام در آنلاین مارکت لطفا پست الکترونیک خود را وارد نمایید:</string>
    <string name="email">پست الکترونیک</string>
    <string name="login_signup">ورود یا ثبت نام</string>
    <string name="login_rule">با ورود و یا ثبت نام در فروشگاه شما تمامی قوانین را می پذیرید.</string>
    <string name="name">نام:</string>
    <string name="family">نام خانوادگی:</string>
    <string name="phone">تلفن:</string>
    <string name="welcome_note">عزیز به آنلاین مارکت خوش آمدید</string>
    <string name="Address">آدرس:</string>
    <string name="sign_out">خروج</string>
    <string name="just_products">مشاهده کالاهای:</string>
    <string name="only_onsale">فقط فروش ویژه</string>
    <string name="only_in_stock">فقط موجود در انبار</string>
    <string name="price_more_than">قیمت بیشتر از</string>
    <string name="price_less_than">قیمت کمتر از</string>
    <string name="back">بازگشت</string>
    <string name="filter">فیلتر</string>
    <string name="sign_up">ثبت نام</string>
    <string name="on_sale">فروش ویژه</string>
    <string name="new_products">جدیدترین محصولات</string>
    <string name="popular_products">پربازدیدترین محصولات</string>
    <string name="top_rated_products">بهترین محصولات</string>
    <string name="add_to_cart_done">به سبد خرید اضافه شد.</string>


    <string name="channel_id">online_market_channel_id</string>
    <string name="channel_name">Online Market Channel</string>
    <string name="channel_description">This is notification channel for online market</string>
    <string name="new_product_added_title">"محصول جدید آنلاین مارکت "</string>
    <string name="new_product_added_text">از محصول جدید ما بازدید کنید</string>
    <string name="setting">Setting</string>
    <string name="search">search</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting_updatd">تنظیمات بروز شد.</string>
    <string name="periodic_notification">اطلاع از محصولات جدید به صورت دوره ای:</string>
    <string name="app_settings">تنظیمات برنامه</string>
    <string name="exact_notification">اطلاع از محصولات جدید در زمان مشخص:</string>
    <string name="notification_timing">زمان بندی اعلان:</string>
    <string name="three_hours">3 ساعت</string>
    <string name="five_hours">5 ساعت</string>
    <string name="eight_hours">8 ساعت</string>
    <string name="twelve_hours">12 ساعت</string>
    <string name="select_time">انتخاب زمان</string>
    <string name="welcome_note_anonymous">بـه فـروشـگـاه خـوش آمـدیـد</string>
    <string name="select_address">لطفا آدرس جهت ارسال را انتخاب نمایید:</string>
    <string name="finish_shopping">ثبت نهایی سفارش</string>
    <string name="add_address">+ افزودن آدرس</string>
    <string name="please_complete_address">لطفا آدرس را تکمیل کنید:</string>
    <string name="register_address">ثبت آدرس</string>
    <string name="select_address_hint">جهت انتخاب آدرس لطفا انگشت خود را نگه دارید</string>
    <string name="Address_name">نام آدرس:</string>
    <string name="please_get_full_info">لطفا اطلاعات را کامل و دقیق وارد نمایید</string>
    <string name="please_fill_information">لطفا مشخصات خود را وارد نمایید:</string>
    <string name="coupon">کد تخفیف:</string>
    <string name="login_before_perchase">جهت خرید لطفا وارد شوید</string>
    <string name="register_code">ثبت کد</string>
    <string name="price_before_discount">مبلغ قبل از تخفیف:</string>
    <string name="discount_amount">میزان تخفیف:</string>
    <string name="final_price">مبلغ قابل پرداخت:</string>
    <string name="product_rate">نمره محصول</string>
    <string name="review_note">متن نظر: </string>
    <string name="submit_review">ثبت نظر</string>
    <string name="check_your_internet_connection">لطفا ارتباط اینترنت خود را بررسی نماببد.</string>

    <string-array name="rating_spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>