<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hfad.onlinemarket.viewmodel.SettingViewModel" />

        <variable
            name="settingFragment"
            type="com.hfad.onlinemarket.view.fragment.SettingsFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SettingsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/app_settings"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView12"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/periodic_notification"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/notification_control_switch"
            app:layout_constraintStart_toStartOf="@+id/notification_control_switch"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView11" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification_control_switch"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.notificationState}"
            android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChangedPeriodic(checked)}"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView11" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/notification_timing"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView12" />


        <RadioGroup
            android:id="@+id/radio_group_notification_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onCheckedChanged="@{viewModel.onSplitTypeChanged}"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView13">

            <RadioButton
                android:id="@+id/three_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_hours" />

            <RadioButton
                android:id="@+id/five_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_hours" />

            <RadioButton
                android:id="@+id/eight_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight_hours" />

            <RadioButton
                android:id="@+id/twelve_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twelve_hours" />

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView14"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/exact_notification"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/switch_exact_notification"
            app:layout_constraintStart_toStartOf="@id/switch_exact_notification"
            app:layout_constraintTop_toBottomOf="@id/radio_group_notification_interval"
            tools:layout_editor_absoluteX="163dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_exact_notification"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:checked="@{viewModel.stateExactNotification}"
            android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChangedExact(checked)}"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_notification_interval" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{()->viewModel.onClickExactTimeSelect(settingFragment)}"
            android:text="@string/select_time"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView14" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>