<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner_white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|right"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just_products"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/only_onsale" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/onSale_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/only_in_stock" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/inStock_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/logo"
                app:layout_constraintCircleRadius="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_min_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ems="10"
                    android:hint="@string/price_more_than"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/logo"
                app:layout_constraintCircleRadius="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_max_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ems="10"
                    android:hint="@string/price_less_than"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="5dp"
                app:singleSelection="true">


            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dismiss_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corner_white"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corner_white"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>
