<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.FinishShoppingFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/select_address"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView15"
            tools:layout_editor_absoluteX="3dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_address_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/add_address"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/address_recyclerView" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_shopping"
            android:layout_margin="3dp"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>