<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hfad.onlinemarket.viewmodel.AddAddressMapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_white"
            android:gravity="center"
            android:text="@string/select_address_hint"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView16"
            tools:context=".view.fragment.AddAddressMapsFragment" />

        <ScrollView
            android:id="@+id/full_address_option"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_corner_white"
            android:visibility="@{viewModel.pointSelected?View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/please_complete_address"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:singleLine="false"
                    android:text="@{viewModel.billingAddress}"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="2"
                        android:text="@string/Address_name"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:hint="@string/home"
                        android:layout_weight="3"
                        android:singleLine="false"
                        android:textSize="16sp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_address_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/register_address"
                        android:textSize="20sp"
                        app:cornerRadius="10dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>